# my-arithmetic-sondos-kocila

./: .gitlab-ci.yml  LICENSE.txt  README.md  pyproject.toml  readthedocs.yml  test.txt
.github/workflows/: build.yml  deploy.yml  test.yml
docs/: conf.py
docs/source/: index.rst
src/my_arithmetic_sondos_kocila/: __about__.py  __init__.py  main.py  pgcd.py
tests/: __init__.py  test_pgcd.py
