[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.dependencies.tests]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"

[project]
name = "my-arithmetic-sondos-kocila"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "kocila", email = "sondos.kocila2022@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/kocila/my-arithmetic-sondos-kocila#readme"
Issues = "https://github.com/kocila/my-arithmetic-sondos-kocila/issues"
Source = "https://github.com/kocila/my-arithmetic-sondos-kocila"

[tool.hatch.version]
path = "src/my_arithmetic_sondos_kocila/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/my_arithmetic_sondos_kocila tests}"

[tool.coverage.run]
source_pkgs = ["my_arithmetic_sondos_kocila", "tests"]
branch = true
parallel = true
omit = [
  "src/my_arithmetic_sondos_kocila/__about__.py",
]

[tool.coverage.paths]
my_arithmetic_sondos_kocila = ["src/my_arithmetic_sondos_kocila", "*/my-arithmetic-sondos-kocila/src/my_arithmetic_sondos_kocila"]
tests = ["tests", "*/my-arithmetic-sondos-kocila/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
