[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.dependencies.tests]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"

[project]
name = "my-arithmetic-sondos-kocila"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "kocila", email = "sondos.kocila2022@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/kocila/my-arithmetic-sondos-kocila#readme"
Issues = "https://github.com/kocila/my-arithmetic-sondos-kocila/issues"
Source = "https://github.com/kocila/my-arithmetic-sondos-kocila"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel]
packages = ["src/my_arithmetic_sondos_kocila"]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.8", "3.9", "3.10", "3.11"]

[tool.coverage.run]
source_pkgs = ["my_arithmetic_sondos_kocila", "tests"]
branch = true
parallel = true
omit = [
  "src/my_arithmetic_sondos_kocila/__about__.py",
]

[tool.coverage.paths]
my_arithmetic_sondos_kocila = ["src/my_arithmetic_sondos_kocila", "*/my-arithmetic-sondos-kocila/src/my_arithmetic_sondos_kocila"]
tests = ["tests", "*/my-arithmetic-sondos-kocila/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:", 
]

[tool.hatch.envs.coverage]
detached = true
dependencies = [
  "coverage[toml]>=6.2",
  "lxml",
]

[tool.hatch.envs.coverage.scripts]
combine = "coverage combine {args}"
report-xml = "coverage xml"
report-uncovered-html = "coverage html --skip-covered --skip-empty"